# spice

./: .gitignore  CMakeLists.txt  README.md  dc_summary.md
dc/: README.md  bjt1_nr.c  bjt1_nr_only.c  bjt1_source_stepping.c  netlist_dc_solver.c  source_stepping.h
dc/examples/: bjt1_nr.c  bjt1_source_stepping.c  bjt2_source_stepping.c  bjt3_nr.c  bjt3_source_stepping.c
examples/: bjt1_source_stepping.c  bjt2_nr.c  bjt2_source_stepping.c  bjt3_source_stepping.c
include/: dc_solver.h  homotopy.h
learning/note/: Homotopy.md  README.md  arclength.md  continuation.md  dc_solver_project_summary.md  homotopy_experiment.md  implementation.md  newton.md
learning/tools/: plot_homotopy_paths.py
netlist/Schmitt1_netlist/PSPICE_files/: SCHMITT CIRCUIT 1-SCHEMATIC1.net  SCHMITT CIRCUIT 1.DBK  SCHMITT CIRCUIT 1.DSN  schmitt circuit 1-SCHEMATIC1-bias.out.1  schmitt circuit 1-SCHEMATIC1-bias.sim  schmitt circuit 1-SCHEMATIC1-bias.sim.1OP  schmitt circuit 1-SCHEMATIC1-bias.sim.cir  schmitt circuit 1.opj
netlist/Schmitt2_netlist/: Note.txt
netlist/Schmitt2_netlist/PSPICE_files/: SCHMITT CIRCUIT 2.DBK  SCHMITT CIRCUIT 2.DSN  schmitt circuit 2-SCHEMATIC1-bias.out.1  schmitt circuit 2-SCHEMATIC1-bias.sim  schmitt circuit 2-SCHEMATIC1-bias.sim.1OP  schmitt circuit 2-SCHEMATIC1-bias.sim.cir  schmitt circuit 2.opj
netlist/Schmitt3_netlist/PSPICE_files/: CHUA-SCHEMATIC1.net  CHUA.DBK  CHUA.DSN  Chua.opj  (+4 more)
src/: dc_solver.c  homotopy.c  netlist_dc_solver.c  source_stepping.c
tests/: reference_homotopy_experiments.c  source_stepping_benchmark.c  test_dc_solver.c  test_homotopy.c
